# meta

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  stitch.html
.github/workflows/: deploy-hf-space.yml
backend/: __init__.py  app.py  baseline.py  comprehensive_eval.py  eval_rl.py  eval_suite.py  evaluation_results.json  hackathon_eval.py  inference.py  openai_agent.py  openenv.yaml  pyproject.toml  rate_limiter.py  requirements.txt  task_queue.py  test_pipeline.py  train_rl.py
backend/checkpoints/: q_learning_policy.json
backend/env/: __init__.py  action.py  environment.py  observation.py  reward.py  reward_config.py  state.py
backend/generator/: __init__.py  pr_generator.py
backend/grader/: __init__.py  grader.py  task_graders.py
backend/rl/: __init__.py  action_space.py  q_learning.py
backend/scripts/: full_verify.py  test_pipeline.py
backend/tasks/: __init__.py  dynamic_loader.py  dynamic_store.py  loader.py  task_hard.py  task_registry.py
backend/tasks/data/: easy_auth_001.json  easy_csrf_001.json  hard_security_001.json  medium_null_001.json  medium_race_001.json
backend/tests/: conftest.py  test_action.py  test_reward.py  test_rl.py
env/: __init__.py  action.py  environment.py  observation.py  reward.py  schema.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionPanel.jsx  Header.jsx  PRViewer.jsx  ResultPanel.jsx  StateViewer.jsx  TaskSelector.jsx  Toast.jsx  UploadPanel.jsx
frontend/src/services/: api.js
grader/: __init__.py  grader.py  score_utils.py  task_graders.py
server/: app.py
tasks/: task_easy.py  task_medium.py
templates/: index.html
