[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "OpenEnv-compliant RL benchmark environment for AI code review agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "code-review", "benchmark", "openenv", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpt4 = ["openai>=1.0"]
ui   = ["gradio>=4.0"]
all  = ["openai>=1.0", "gradio>=4.0"]

[project.scripts]
code-review-baseline  = "baseline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "generator*", "grader*", "tasks*"]
