[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "1.0.0"
description = "OpenEnv-compliant RL benchmark environment for AI code review agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "code-review", "benchmark", "openenv", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
code-review-baseline = "backend.baseline:main"
code-review-inference = "backend.inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.tasks" = ["data/*.json"]
